# forge-lab

./: README.md
P00-ambiente-reproduzivel/: LEARNING.md  Makefile  README.md  pyproject.toml  scenario.yaml
P00-ambiente-reproduzivel-com-uv/: .gitignore  pyproject.toml
P00-ambiente-reproduzivel-com-uv/evidence/: environment.txt
P00-ambiente-reproduzivel-com-uv/experiments/: missing_dependency.py  pyright-missing.json  pyright-type.json  type_error.py
P00-ambiente-reproduzivel-com-uv/src/p00_ambiente_reproduzivel/: greeting.py
P00-ambiente-reproduzivel-com-uv/tests/: test_greeting.py
P00-ambiente-reproduzivel/evidence/: environment.txt
P00-ambiente-reproduzivel/scripts/: verify_failures.py
P00-ambiente-reproduzivel/src/p00_ambiente_reproduzivel/: __init__.py  cli.py
P01-normalizador-jsonl-tipado/: .gitignore  LEARNING.md  Makefile  README.md  pyproject.toml
P01-validacao-tipada-com-pydantic-e-jsonl/: pyproject.toml  scenario.yaml
P01-validacao-tipada-com-pydantic-e-jsonl/src/order_normalizer/: __init__.py
P01-validacao-tipada-com-pydantic-e-jsonl/tests/: test_normalizer.py
P02-asyncio-threads-e-processos/: README.md  scenario.yaml
P02-corrida-io-versus-cpu/: LEARNING.md  Makefile  README.md  pyproject.toml  scenario.yaml
P02-corrida-io-versus-cpu/evidence/: results.md
P02-corrida-io-versus-cpu/src/concurrency_race/: __init__.py  cli.py  config.py  measurement.py  reporting.py  runner.py
P02-corrida-io-versus-cpu/tests/: test_config.py  test_runner.py  test_strategies.py
P03-api-tarefas-por-contrato/: LEARNING.md  Makefile  README.md  pyproject.toml
P03-fastapi-contratos-e-injecao-de-dependencias/: README.md  pyproject.toml  scenario.yaml
P04-job-que-sobrevive-ou-nao-ao-crash/: LEARNING.md  Makefile  README.md  pyproject.toml  scenario.yaml
P04-job-que-sobrevive-ou-nao-ao-crash/evidence/: events-crash.jsonl  events-graceful.jsonl  events-shutdown-failure.jsonl  events-startup-failure.jsonl  result.txt
P04-job-que-sobrevive-ou-nao-ao-crash/scripts/: run_experiment.py
P04-job-que-sobrevive-ou-nao-ao-crash/src/lifecycle_api/: app.py  cli.py  components.py  schemas.py
P04-job-que-sobrevive-ou-nao-ao-crash/tests/: conftest.py  test_blocking.py  test_lifecycle.py  test_middleware_and_jobs.py
P04-lifespan-middleware-e-background-tasks/: README.md
P05-retry-do-provedor-instavel/: LEARNING.md  README.md  pyproject.toml
P05-retry-do-provedor-instavel/evidence/: result.txt
P05-retry-do-provedor-instavel/scripts/: run_experiment.py
P05-retry-do-provedor-instavel/src/retry_client/: __init__.py  client.py  model.py  provider.py  timing.py
P05-retry-do-provedor-instavel/tests/: __init__.py  conftest.py  test_policy_matrix.py  test_retry.py
P05-timeout-retry-backoff-e-jitter/: README.md  pyproject.toml  scenario.yaml
P06-circuit-breaker-e-token-bucket/: pyproject.toml
P06-circuito-e-portao-de-rajada/: LEARNING.md  Makefile  README.md  pyproject.toml  scenario.yaml
P06-circuito-e-portao-de-rajada/evidence/: result.txt
P06-circuito-e-portao-de-rajada/scripts/: run_experiment.py
P06-circuito-e-portao-de-rajada/src/provider_guard/: __init__.py  circuit.py  client.py  config.py  errors.py  model.py  provider.py  rate_limit.py  timing.py
P06-circuito-e-portao-de-rajada/tests/: conftest.py  test_circuit.py  test_client.py  test_rate_limit.py  test_secret.py
P07-contrato-http-paginado/: README.md  pyproject.toml  scenario.yaml
P07-contrato-http-paginado/evidence/: result.txt
P07-contrato-http-paginado/scripts/: run_experiment.py
P07-contrato-http-paginado/src/paginated_contract/: __init__.py  client.py  contract.py  errors.py  feed.py  model.py
P07-contrato-http-paginado/tests/: test_client.py  test_contract_evolution.py  test_dynamic_feed.py
P07-paginacao-por-cursor/: pyproject.toml
P08-caixa-de-entrada-de-webhook-assinado/: pyproject.toml
P08-caixa-de-entrada-de-webhook-assinado/evidence/: result.txt
P08-caixa-de-entrada-de-webhook-assinado/src/webhook_inbox/: __init__.py  repository.py  signing.py  worker.py
P08-caixa-de-entrada-de-webhook-assinado/tests/: __init__.py  test_receiver.py
P08-webhook-hmac-inbox-e-idempotencia/: README.md  scenario.yaml
P09-postgresql-constraints-e-migrations/: README.md  alembic.ini  compose.yaml  scenario.yaml
P09-schema-que-protege-o-dominio/: pyproject.toml
P09-schema-que-protege-o-dominio/alembic/: env.py  script.py.mako
P09-schema-que-protege-o-dominio/src/schema_guard/: __init__.py  experiment.py  migrations.py  models.py  scenario.py
P10-explain-analyze-e-indices/: README.md  compose.yaml  pyproject.toml  scenario.yaml
P10-explain-analyze-e-indices/evidence/: README.md  result.txt
P10-explain-analyze-e-indices/evidence/plans/: indice_composto_alinhado.json  indice_composto_alinhado.txt  indice_inadequado.json  indice_inadequado.txt  sem_indice.json  sem_indice.txt  sequential_scan_legitimo.json  sequential_scan_legitimo.txt
P10-explain-analyze-e-indices/scripts/: run_experiment.py
P10-explain-analyze-e-indices/src/query_clinic/: __init__.py  config.py  database.py  plans.py
P10-explain-analyze-e-indices/tests/: test_config.py  test_integration.py  test_plans.py
P11-postgresql-rls-e-connection-pool/: README.md  compose.yaml  pyproject.toml  scenario.yaml
P11-postgresql-rls-e-connection-pool/evidence/: result.txt
P11-postgresql-rls-e-connection-pool/scripts/: run_experiment.py
P11-postgresql-rls-e-connection-pool/sql/: 001_schema.sql
P11-postgresql-rls-e-connection-pool/src/tenant_guard/: __init__.py  database.py  scenario.py
P11-postgresql-rls-e-connection-pool/tests/: conftest.py  test_rls.py  test_scenario.py
P12-kafka-versus-rabbitmq/: README.md  compose.yaml  pyproject.toml  scenario.yaml
P12-kafka-versus-rabbitmq/evidence/: result.txt
P12-kafka-versus-rabbitmq/scripts/: run_experiment.py
P12-kafka-versus-rabbitmq/src/broker_models/: __init__.py  comparison.py  experiment.py  kafka_demo.py  model.py  rabbit_demo.py
P12-kafka-versus-rabbitmq/tests/: test_brokers.py  test_comparison.py  test_model.py
(+88 files in other folders)
