[project]
name = "p00-ambiente-reproduzivel"
version = "0.1.0"
description = "Microprojeto sobre setup Python reproduzivel com pyenv e uv"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = []

[project.scripts]
p00 = "p00_ambiente_reproduzivel.cli:main"

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests", "scripts"]
exclude = ["experiments"]
pythonVersion = "3.14"
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py314"
line-length = 100
exclude = ["experiments"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
