[project]
name = "p01-normalizador-jsonl-tipado"
version = "0.1.0"
description = "CLI tipada que normaliza pedidos JSONL sem esconder entradas invalidas"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "pydantic>=2.12.0",
    "typer>=0.16.0",
]

[project.scripts]
normalize-orders = "order_normalizer.cli:main"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "order_normalizer"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
