[project]
name = "p02-corrida-io-versus-cpu"
version = "0.1.0"
description = "Experimento sobre asyncio, bloqueio, threads, processos e GIL"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = []

[project.scripts]
run-race = "concurrency_race.cli:main"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "concurrency_race"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
