[project]
name = "p02-corrida-io-versus-cpu"
version = "0.1.0"
description = "Experimento sobre asyncio, bloqueio, threads, processos e GIL"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "pydantic>=2.12.0",
    "pyyaml>=6.0.3",
    "tabulate>=0.9.0",
    "typer>=0.16.0",
]

[project.scripts]
run-race = "concurrency_race.cli:main"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.22",
    "types-pyyaml>=6.0.12",
    "types-tabulate>=0.9.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "concurrency_race"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
