[project]
name = "p04-job-que-sobrevive-ou-nao-ao-crash"
version = "0.1.0"
description = "Laboratorio FastAPI sobre lifecycle, bloqueio e BackgroundTasks"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.7.0",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "lifecycle_api"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests", "scripts"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
