[project]
name = "p06-circuito-e-portao-de-rajada"
version = "0.1.0"
description = "Circuit breaker e token bucket locais com tempo controlável"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "provider_guard"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests", "scripts"]
# O workspace externo usa este ambiente exclusivo para analisar o P06.
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
