[project]
name = "p10-clinica-do-plano-de-consulta"
version = "0.1.0"
description = "EXPLAIN, indices, projecao e N+1 guiados por evidencia no PostgreSQL"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "query_clinic"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = ["integration: exige o PostgreSQL descartavel do projeto"]

[tool.pyright]
include = ["src", "tests", "scripts"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
