[project]
name = "p12-log-ou-fila"
version = "0.1.0"
description = "Comparacao pratica entre log Kafka e fila RabbitMQ"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "aio-pika>=9.5.8",
    "aiokafka>=0.12.0",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "broker_models"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "integration: exige Redpanda e RabbitMQ locais",
]

[tool.pyright]
include = ["src", "tests", "scripts"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
